php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #16985 register vars wrong
Submitted: 2002-05-03 05:31 UTC Modified: 2002-07-15 13:51 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:1 (100.0%)
From: alberty at neptunelabs dot de Assigned:
Status: Closed Package: Variables related
PHP Version: 4.3.0-dev OS: i686-pc-linux-gnu
Private report: No CVE-ID: None
 [2002-05-03 05:31 UTC] alberty at neptunelabs dot de
Hi,

i have detect a different behavior between register variables
in the current cvs tree und PHP 4.2.0 and previously.


When i make a request like


http://my.testserver/test.php?foo=123&lokus&bar=456



with version 4.2.0 PHP register:

_GET["foo"] 123  
_GET["bar"] 456  


with the current cvs tree from 2. May 2002 PHP results:

_GET["foo"] 123  
_GET["lokus"] 

I think this behavior is not wanted.


Regards,

Steve

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-07-15 12:08 UTC] edink@php.net
The bug is in mbstring extension which is enabled by default in PHP 4.3.0-dev. If you compile php with --disable-mbstring it should disappear.
 [2002-07-15 13:51 UTC] edink@php.net
This bug has been fixed in CVS. You can grab a snapshot of the
CVS version at http://snaps.php.net/. In case this was a documentation 
problem, the fix will show up soon at http://www.php.net/manual/.
In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites.
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 07 07:00:01 2026 UTC