Fix bug #16985 (wrong count of GET/POST variables).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@88757 c90b9560-bf6c-de11-be94-00142212c4b1